# rails_ai_agents

./: LICENSE  README.md  mcp-servers-rails-guide.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: controller-agent.md  form-agent.md  implementation-agent.md  inertia-agent.md  lint-agent.md  migration-agent.md  presenter-agent.md  react-component-agent.md  rspec-agent.md  tdd-refactoring-agent.md  turbo-agent.md
.claude/agents/references/controller/: templates.md
.claude/agents/references/inertia/: forms-and-validation.md  page-components.md  testing.md
.claude/commands/sdd/: analyze.md  implement.md  plan.md
.claude/skills/code-review/: SKILL.md
.claude/skills/extraction-timing/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/feature-plan/: SKILL.md
.claude/skills/feature-review/: SKILL.md
.claude/skills/performance-optimization/: SKILL.md
.claude/skills/rails-architecture/: SKILL.md
.claude/skills/react-best-practices/: SKILL.md
.claude/skills/tdd-cycle/: SKILL.md
.claude_37signals/: CLAUDE.md
.specify/scripts/bash/: check-prerequisites.sh
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
docs/: claude-code-extensibility-guide.md  mcp-servers-rails-guide.md  prompt-engineering-for-claude-code.md  rails-development-principles.md  your-first-sdd-feature.md
mcp/sentry_monitor/: pyproject.toml
mcp/sentry_monitor/mcp_server/: sentry_client.py  server.py
mcp/sentry_monitor/tests/: test_sentry_client.py  test_tools.py
(+2 files in other folders)
