[project]
name = "sentry-mcp-monitor"
version = "0.1.0"
description = "MCP server exposing Sentry production error data to Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
